fix: fix colab and gradio

--- a/G1/colab.ipynb
+++ b/G1/colab.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm -rf playground\n",
     "!git clone https://github.com/ChoYongchae/playground\n",
-    "!pip install gradio diffusers"
+    "!pip install gradio diffusers transformers accelerate"
    ]
   },
   {
